<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNoteActivity"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/colorIcons"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:contentDescription="@string/app_name"/>

            <ImageView
                android:id="@+id/imageCreateNote"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorIcons"
                android:padding="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_done_btn"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"/>

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/note_title"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:includeFontPadding="false"
                android:background="@null"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                android:fontFamily="@font/ubuntu_bold"/>

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_2sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"/>
            
            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                app:layout_constraintStart_toEndOf="@+id/viewIndicatorSubtitle"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"/>

            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/background_remove_image"
                android:padding="@dimen/_4sdp"
                android:visibility="gone"
                android:src="@drawable/ic_delete"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                app:layout_constraintEnd_toEndOf="@id/imageNote"/>

            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13ssp"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/ubuntu_regular"
                    android:autoLink="web"/>

                <ImageView
                    android:id="@+id/imageRemoveWebURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:tint="@color/colorDelete"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/app_name"/>

            </LinearLayout>

            <View
                android:id="@+id/viewIndicatorSubtitle"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_100sdp"
                android:hint="@string/type_note_here"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="top"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/_13ssp"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/colorWhite"
                android:inputType="textMultiLine"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>